--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="DarkTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="DarkTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/dark_primary_color</item>
         <item name="colorPrimaryDark">@color/dark_primary_dark_color</item>
         <item name="colorAccent">@color/teal_200</item>
         <item name="text_color">@color/dark_text_color</item>
         <item name="background_color">@color/dark_bg_color</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="text_hint_color">@color/dark_icon_tint_color</item>
     </style>
 </resources>
