--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,12 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="DarkTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_primary_color</item>
-        <item name="colorPrimaryDark">@color/dark_primary_dark_color</item>
+    <style name="Theme.NewsApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/teal_200</item>
-        <item name="text_color">@color/dark_text_color</item>
-        <item name="background_color">@color/dark_bg_color</item>
-        <item name="text_hint_color">@color/dark_icon_tint_color</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+        <item name="background_color">@color/black</item>
+        <item name="text_color">@color/white</item>
+        <item name="text_hint_color">@color/white</item>
+
     </style>
 </resources>
