--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.NewsApp" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
+        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
-        <item name="text_color">@color/light_text_color</item>
-        <item name="background_color">@color/light_bg_color</item>
-        <item name="text_hint_color">@color/dark_icon_tint_color</item>
-        <item name="android:textColorSecondary">@color/dark_icon_tint_color</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+        <item name="background_color">@color/white</item>
+        <item name="text_color">@color/black</item>
+        <item name="text_hint_color">@color/black</item>
     </style>
 </resources>
